# qt-quick-controls-2-cmake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc  main.qml
